<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_bottom_dialog"
        android:paddingBottom="20dp">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/LLHowToLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:elevation="3dp"
                android:orientation="vertical">
                <View
                    android:layout_width="40dp"
                    android:layout_height="5dp"
                    android:layout_gravity="center"
                    android:background="@drawable/round_button"
                    android:layout_marginTop="15dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:text="@string/how_to_download"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:id="@+id/tvHowToHeadOne"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:elevation="3dp"
                    android:id="@+id/LLHowToOne"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvHowTo1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="2dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="2dp"
                        android:text="1. Open TikTok"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <ImageView
                        android:id="@+id/im_howto1"
                        android:layout_width="250dp"
                        android:layout_height="250dp"
                        android:layout_gravity="center"
                        android:layout_margin="10dp" />

                    <TextView
                        android:id="@+id/tvHowTo2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="2dp"
                        android:layout_marginEnd="2dp"
                        android:text="@string/second_how_too"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <ImageView
                        android:id="@+id/im_howto2"
                        android:layout_width="250dp"
                        android:layout_height="250dp"
                        android:layout_gravity="center"
                        android:layout_margin="10dp" />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/or_download_using_copied_link"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:id="@+id/tvHowToHeadTwo"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:elevation="3dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvHowTo3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="2dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="2dp"
                        android:text="1. Open TikTok"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <ImageView
                        android:id="@+id/im_howto3"
                        android:layout_width="250dp"
                        android:layout_height="250dp"
                        android:layout_gravity="center"
                        android:layout_margin="10dp" />

                    <TextView
                        android:id="@+id/tvHowTo4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="2dp"
                        android:layout_marginEnd="2dp"
                        android:text="@string/fourth_how_too"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <ImageView
                        android:id="@+id/im_howto4"
                        android:layout_width="250dp"
                        android:layout_height="250dp"
                        android:layout_gravity="center"
                        android:layout_margin="10dp" />
                </LinearLayout>
            </LinearLayout>

        </androidx.core.widget.NestedScrollView>
    </LinearLayout>
</layout>